no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -15,12 +15,12 @@ TYPESCRIPT/FLOW ==>               #See TSESTree
 
 NOTATION ==>                     -#Pull requests
                                  ##Outside of ESTree
-                                 B#@babel/parser
+                                 S#esprima
                                  A#acorn
                                  E#Espree
                                  T#Typescript-estree
-                                 S#esprima
                                  M#meriyah
+                                 B#@babel/parser
                                   #Lowercase means "not present"
 
 
@@ -36,7 +36,7 @@ OPTIONAL VALUES ==>               #Are either defined or null
 any                               #NODE:
                                   #  - type STR
                                   #  - [loc] (position in source code):
-                            beatsM#     - [source VAL]
+                            seatbM#     - [source VAL]
                                   #     - start|end:
                                   #        - line NUM (1-indexed)
                                   #        - column NUM (0-indexed)
@@ -154,7 +154,7 @@ VAR                               #Child of EXPR+PATTERN, type 'Identifier':
 OBJ.VAR                           #Child of EXPR+PATTERN, type 'MemberExpression':
 OBJ[VAL]                          #  - object EXPR|SUPER (OBJ)
                                   #  - property EXPR (VAL) or IDENTIFIER (VAR)
-                                 -#    or PRIVATE_NAME (#VAR)
+                              -set#    or PRIVATE_NAME (#VAR)
                                   #  - computed true (VAL) or false (VAR)
                                  -#  - optional BOOL (OBJ?.VAR or OBJ?.[VAL])
 
@@ -193,7 +193,7 @@ FUNC                              #FUNCTION:
                                   #     - body STATEMENT|DIRECTIVE_ARR
                                   #  - generator BOOL
                                   #  - async BOOL
-                                 AE#  - expression BOOL
+                                AE#  - expression BOOL
 
 [async] function [*]FUNC(...){}   #Child of FUNCTION+DECLARATION, type 'FunctionDeclaration'
 [async] function [*][FUNC](...){} #Child of FUNCTION+EXPR, type 'FunctionExpression'
@@ -414,8 +414,9 @@ class [CLASS] [extends PARENT] {  #  - [id IDENTIFIER]
                                  -#  - [value EXPR]
                                  -#  - static BOOL
                                  -#  - computed BOOL
-  #VAR|#FUNC()                   -#Type 'PrivateName':
-                                 -#  - name STR
+  #VAR|#FUNC()                -set#Type 'PrivateName':
+                             -bset#  - name STR
+                             -Bset#  - identifier IDENTIFIER
 class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclaration'
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
