no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -6,14 +6,16 @@
 
 
 See:
-  - https://www.typescriptlang.org/docs/handbook/configuring-watch.html
   - https://github.com/Microsoft/TypeScript/wiki
      - including tsserver
-  - https://github.com/Microsoft/TypeScript/wiki/What's-new-in-TypeScript
-  - https://devblogs.microsoft.com/typescript/
+  - updates:
+     - https://github.com/Microsoft/TypeScript/wiki/What's-new-in-TypeScript
+     - https://github.com/microsoft/TypeScript/wiki/Breaking-Changes
+     - https://devblogs.microsoft.com/typescript/
   - https://github.com/microsoft/TypeScript/blob/master/doc/spec.md
   - source like https://github.com/microsoft/TypeScript/blob/master/src/lib/es5.d.ts
   - JSDoc then https://www.typescriptlang.org/docs/handbook/type-checking-javascript-files.html
+  - check VSCode options
   - to_learn.txt
   - GitHub search
   - add to my projects
@@ -63,6 +65,17 @@ CONF.include|exclude              #Input FILEs but as 'GLOB'_ARR
 --watch|w                         #Watch mode
 --preserveWatchOutput             #Do not clear screen between runs with --watch
 CONF.compileOnSave                #Tells IDE to run tsc in watch mode.
+ENVVAR TSC_WATCHFILE              #Whether --watch uses fs.watchFile() or fs.watch():
+                                  #  - def: fs.watchFile() with 250ms interval
+                                  #  - 'PriorityPollingInterval': fs.watchFile() with longer intervals for config files and missing files
+                                  #  - 'DynamicPriorityPolling': fs.watchFile() with longer intervals for not frequently modified files
+                                  #  - 'UseFsEventsOnParentDirectory' (def if ENVVAR TSC_NONPOLLING_WATCHER set): use fs.watch() on root directory
+                                  #  - 'UseFsEvents': fs.watch() on files
+                                  #  - 'UseFsEventsWithFallbackDynamicPolling': 'useFsEvents' with fallback to 'DynamicPriorityPolling'
+ENVVAR TSC_WATCHDIRECTORY         #When using fs.watch('DIR') on Linux, since it does not support OPTS.recursive, how to handle it:
+                                  #  - def: recurse over descendants and use fs.watch()
+                                  #  - 'RecursiveDirectoryUsingFsWatchFile': fs.watchFile()
+                                  #  - 'RecursiveDirectoryUsingDynamicPriorityPolling': fs.watchFile() with longer intervals for not frequently modified files
 
 -i|--incremental                  #Outputs a tsconfig.tsbuildinfo containing:
                                   #  - a hash of each file's content
@@ -375,7 +388,7 @@ class ...
 TYPE | TYPE2                      #Union ("or")
 TYPE & TYPE2
 Extract<TYPE, TYPE2>              #Intersection ("and")
-Excludes<TYPE, TYPE2>             #Difference (in TYPE but not in TYPE2)
+Exclude<TYPE, TYPE2>              #Difference (in TYPE but not in TYPE2)
 
 
 type TYPE<T...> = ...             #Declaring a generic TYPE, i.e. must specify another TYPE2 during usage.
