--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1920,7 +1920,7 @@ TEMP.cleanup(FUNC(ERROR,OBJ))                  ##Remove temp files. TEMP.track()
                                                ##OBJ: files|dirs NUM
 
 
-watch('DIR'[, OPTS][, FUNC])->FSWATCHER         #FSWATCHER fires events when s file changes name or content.
+watch('FILE|DIR'[, OPTS][, FUNC])->FSWATCHER    #FSWATCHER fires events when file changes name or content.
                                                 #OPTS:
                                                 #  - persistent BOOL: if true (def), calls ref(), yielding the macrotask
                                                 #  - recursive BOOL (def: false) (not on Linux)
