no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -10,7 +10,7 @@ VERSION ==>                                     #Standard is called ECMAScript. 
 
 SUPPORT ==>                                     #Use this notation for new features:
                                                ~#  - stage 3 proposal
-                                            NUM*#  - introduced by Node NUM.*.* (starting at Node 7)
+                                            NUM*#  - introduced by Node NUM.*.* (starting at Node 9)
                                                *#  - not Node 12.6.0
                                                -#  - not all supported web browsers
                                                |#  - a core Babel plugin exists (only documented if lacks Node/browser support)
@@ -326,7 +326,7 @@ SYM                                           -|#Symbol([STR])
                                               -|#Operators:
                                               -|#  OBJ[SYM]
 
-undefined                                       #Valeur par défaut:
+undefined                                       #Value of:
                                                 #  - non-declared VAR: throw ReferenceError when used, except with typeof
                                                 #  - declared but non-assigned VAR (including arguments and return value)
 
@@ -901,8 +901,9 @@ EXPR                                            #Anything that could go on a sin
 
 TEST ? VAL1 : VAL2                              #Returns VAL1 or VAL2
 
-VAL && VAL2                                     #Same as !!VAL ? VAL : VAL2, for any type (including BOOL)
-VAL || VAL2                                     #Inverse
+VAL && VAL2                                     #Same as VAL ? VAL : VAL2
+VAL || VAL2                                     #Same as VAL ? VAL2 : VAL
+VAL ?? VAL2                                   *~#Same as VAL == null ? VAL : VAL2
 
 VAL1, VAL2                                      #Evaluates both, but returns VAL2.
                                                 #Use case: in for or while loops.
@@ -1071,7 +1072,7 @@ STR.replace(REGEXP|STR2, STR3)                  #Returns STR, replacing REGEXP w
                                                 #  - $&: full match
                                                 #  - $`: what's before full match
                                                 #  - $': what's after full match
-                                                #  - $$: $ littéral
+                                                #  - $$: $ literal
 STR.replace(REGEXP|STR2,
 FUNC($&, $1..., INDEX, STR))                    #Returs STR, replacing REGEXP with FUNC(...)
 STR.split(REGEXP|STR2[, UINT])                  #Returns an ARR, with REGEXP|STR2 being split delimiter.
