--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -555,7 +555,7 @@ proposal-json-strings             #U+2028|2029 allowed in STR
 transform-named-capturing-groups-
  regex                            #(?<GROUP>) \k<GROUP>
 
-STAGE 4 ==>                       #
+ES2019 BUT CONSIDERED STAGE ==>   #
 syntax-dynamic-import
 proposal-dynamic-import           #import(...)
 
@@ -565,14 +565,18 @@ proposal-class-properties         #class { [static] VAR = VAL }
 proposal-private-methods          #class { [static] #VAR = VAL }
 syntax-bigint                     #NUMn (syntax-only)
 syntax-import-meta                #import.meta (syntax-only)
+syntax-nullish-coalescing-
+ operator
+proposal-nullish-coalescing
+ -operator                        #??
+syntax-numeric-separator
+proposal-numeric-separator        #NNN_NNN_NNN
 
 STAGE 2 ==>                       #
 syntax-decorators
 proposal-decorators               #@DECORATOR
 syntax-function-sent
 proposal-function-sent            #FUNC.sent
-syntax-numeric-separator
-proposal-numeric-separator        #NNN_NNN_NNN
 syntax-throw-expressions
 proposal-throw-expressions        #throw VAL as EXPR
 
@@ -587,10 +591,6 @@ syntax-logical-assignment-
  operators
 proposal-logical-assignment
  -operators                       #||= &&=
-syntax-nullish-coalescing-
- operator
-proposal-nullish-coalescing
- -operator                        #??
 syntax-optional-chaining
 proposal-optional-chaining        #OBJ?.PROP
 syntax-pipeline-operator
@@ -869,9 +869,11 @@ string/trim-end                   #
 string/trim-start                 #
 symbol/description                #
 
+ES2019 BUT CONSIDERED STAGE ==>   #
+promise/all-settled               #
+
 STAGE 3 ==>                       #
 global-this                       #
-promise/all-settled               #
 
 STAGE 2 ==>                       #
 set/difference                    #
