no commit message

--- a/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/acorn.javascript_cli.txt
@@ -63,23 +63,22 @@ ACORN.parse('JS'[, OPTS])         #Parse JavaScript.
                                   #OPTS:
                                   #  - ecmaVersion 3|5-10 or 2015-2019 (def: 2018)
                                   #  - sourceType 'script|module' (def: 'script')
+                                  #  - allowReturnOutsideFunction BOOL (def: false): top-level return
+                                  #  - allowAwaitOutsideFunction BOOL (def: false): top-level await
+                                  #  - allowImportExportEverywhere BOOL (def: false): non-top-level import|export
+                                  #  - allowReserved BOOL|'never' (def: false): allow VAR that is a reserved keywords (true|false) or a OBJ.VAR ('never')
+                                  #  - allowHashBang BOOL (def: false)
                                   #  - preserveParens BOOL:
                                   #     - parse parenthesis instead of ignoring them
                                   #     - child of EXPR, type 'ParenthesizedExpression': expression EXPR2
+                                  #  - onToken(TOKEN):
+                                  #     - called by tokenizer
+                                  #     - can also be an ARR to push arguments to it
                                   #  - onComment(BOOL, STR, START_OFFSET_NUM, END_OFFSET_NUM):
                                   #     - called on comments
                                   #     - BOOL is // vs /* */
-                                  #     - can also be an ARR to push elements on ARR, but with a slighly different format
-                                  #       mimicing Esprima, e.g. to use with Escodegen
-                                  #  - onToken(TOKEN):
-                                  #     - called by tokenizer
-                                  #     - can also be an ARR to push elements on ARR
-                                  #  - allowReturnOutsideFunction BOOL (def: false): fail on top-level return
-                                  #  - allowAwaitOutsideFunction BOOL (def: false): fail on top-level await
-                                  #  - allowImportExportEverywhere BOOL (def: false): fail on non-top-level import|export
-                                  #  - allowReserved BOOL|'never' (def: false): fail on VAR that is a reserved keywords
-                                  #    (true|false) or a OBJ.VAR ('never')
-                                  #  - allowHashBang BOOL (def: false): ignore hashbangs
+                                  #     - can also be an ARR to push arguments to it
+                                  #        - with a slighly different format mimicking Esprima, e.g. to use with Escodegen
                                   #  - onInsertedSemicolon(NUM, POSITION): called when found a line with missing semicolon
                                   #  - onTrailingComma(NUM, POSITION): called on trailing commas
                                   #  - program PROGRAM2_NODE: prepend PROGRAM2.body to PROGRAM.body
@@ -89,17 +88,16 @@ ACORN.parse('JS'[, OPTS])         #Parse JavaScript.
                                   #Positions:
                                   #  - line-wise (if OPTS.locations true, def false):
                                   #     - POSITION is OBJ.line|column
-                                  #     - NODE|TOKEN.loc:
-                                  #        - start|end POSITION
-                                  #        - sourceFile VAL, using OPTS.sourceFile VAL
-                                  #          Can also be added to NODE.sourceFile, with OPTS.directSourceFile VAL
-                                  #     - can use ACORN.getLineInfo('JS', START_OFFSET)->POSITION
+                                  #     - NODE|TOKEN.loc: start|end POSITION
+                                  #     - NODE|TOKEN[.loc].sourceFile VAL: using OPTS.[direct]sourceFile VAL
+                                  #     - ACORN.getLineInfo('JS', START_OFFSET)->POSITION
                                   #  - non-line-wise:
-                                  #     - NODE|TOKEN.start|end START|END_OFFSET, always defined
-                                  #     - NODE|TOKEN.range [START_OFFSET, END_OFFSET], defined if OPTS.ranges true (def: false)
-ACORN.parseExpressionAt('JS',     #Same but for an expression, not a full file.
-OFFSET_NUM[, OPTS])->EXPR_NODE    #Ignores next expressions|statements
-                                  #A bit faster
+                                  #     - NODE|TOKEN.start|end START|END_OFFSET (always defined)
+                                  #     - NODE|TOKEN.range [START_OFFSET, END_OFFSET] (if OPTS.ranges true, def: false)
+
+ACORN.parseExpressionAt           #Same but for an expression, not a full file.
+ ('JS', OFFSET_NUM[, OPTS])       #Ignores next expressions|statements
+ ->EXPR_NODE                      #A bit faster
 
 
                                              /=+===============================+=\
@@ -110,10 +108,12 @@ OFFSET_NUM[, OPTS])->EXPR_NODE    #Ignores next expressions|statements
 
 
 ACORN.tokenizer('JS'[, OPTS])
- ->TOKENIZER                      #JavaScript tokenizer
-TOKENIZER.getToken()              #Can also use TOKENIZER as ITERATOR (stops at ACORN.tokenTypes.eof), e.g. [...TOKENIZER]
+ ->TOKENIZER                      #
+TOKENIZER                         #TOKEN_ITERATOR. Stops at ACORN.tokTypes.eof
+TOKENIZER.getToken()->TOKEN       #When reached ACORN.tokTypes.eof, keeps returning it.
 TOKEN.value                       #STR
-TOKEN.type                        #Among ACORN.tokTypes.TYPE:
+TOKEN.type                        #TOKEN_TYPE
+ACORN.tokTypes.TYPE               #TOKEN_TYPE where TYPE can be:
                                   #  eof
                                   #  _null
                                   #  _true _false logicalOR logicalAND bitwiseOR question equality relational
@@ -131,7 +131,8 @@ TOKEN.type                        #Among ACORN.tokTypes.TYPE:
                                   #  _instanceof _typeof _void
                                   #  _with
                                   #  prefix
-                                  #Here are the related ACORN.tokTypes.TYPE.label:
+                                  #"name" is VAR, and also some keywords including let, of, yield
+TOKEN_TYPE.label                  #Name STR:
                                   #  eof
                                   #  null
                                   #  true false || && | ? ==/!= </>
@@ -149,8 +150,6 @@ TOKEN.type                        #Among ACORN.tokTypes.TYPE:
                                   #  instanceof typeof void
                                   #  with
                                   #  prefix
-                                  #When reach "eof", keep returning it
-                                  #"name" is VAR, and also some keywords including let, of, yield
 
 
                                              /=+===============================+=\
