no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -15,8 +15,10 @@ TYPESCRIPT/FLOW ==>               #See TSESTree
 
 NOTATION ==>                     |#Pull requests
                                  ##Outside of ESTree
-                                 =#Babel variant of ESTree
-                                 =#  - unless indicated otherwise, only supported by @babel/parser
+                                  #Babel:
+                                 =#  - variant of ESTree
+                                 *#  - ES proposals support
+                                =*#  - unless indicated otherwise, only supported by @babel/parser
                                   #Parsers (no parenthesis if absent, parenthesis if present):
                                  s#  - esprima
                                  a#  - acorn
@@ -216,7 +218,8 @@ await VAL                         #Child of EXPRT, type 'AwaitExpression':
 
 FUNC(...)                         #Child of EXPR, type 'CallExpression':
                                   #  - callee EXPR|SUPER|IMPORT (FUNC)
-                                  #  - arguments EXPR|SPREAD_ELEMENT_ARR
+                                  #  - arguments ARR of EXPR|SPREAD_ELEMENT
+                                 *#    or ARGUMENT_PLACEHOLDER
                            seatmb|#  - optional BOOL (FUNC?.(...))
                                  =#Child of CALL_EXPRESSION, type 'OptionalCallExpression'
                                  =#  - optional BOOL (FUNC?.(...))
@@ -230,6 +233,13 @@ new FUNC(...)                     #Child of EXPR, type 'NewExpression':
                                sae#  - decorators DECORATOR_ARR
                                sae#Type 'Decorator':
                                sae#  - expression EXPR
+
+[VAL]::VAL2                      *#Child of EXPR, type 'BindExpression':
+                                 *#  - [object EXPR] (VAL)
+                                 *#  - [callee EXPR] (VAL2)
+
+?                                *#Type 'ArgumentPlaceholder'
+
 
 
                                              /=+===============================+=\
@@ -289,6 +299,9 @@ LABEL: ...                        #Child of STATEMENT, type 'LabeledStatement':
                                   #  - label IDENTIFIER
                                   #  - body STATEMENT
 
+do {...}                         *#Child of EXPRESSION, type 'DoExpression':
+                                 *#  - body STATEMENT
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -333,6 +346,7 @@ STR|BOOL|NUM|BIGINT|null|REGEXP  b#Child of EXPR, type 'Literal':
                                  =#  (REGEXP only)
                                  =#  - pattern STR
                                  =#  - flags STR
+                               sae#NUM can use _ separators
 undefined                         #Considered a VAR
 
 TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression':
@@ -379,6 +393,7 @@ TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression
 !VAL
 ~VAL                              #Child of EXPR, type 'UnaryExpression':
 typeof VAL                        #  - operator '-|+|!|~|typeof|void|delete'
+throw VAL                        *#    or 'throw'
 void VAL                          #  - prefix BOOL (always true)
 delete VAL                        #  - argument EXPR
 
@@ -390,16 +405,20 @@ VAR--                             #  - argument EXPR
 
 VAL == != === !== < <= > >= <<    #Child of EXPR, type 'BinaryExpression':
 >> >>> + - * / % ** | ^ & in      #  - operator '==|!=|===|!==|<|<=|>|>=|<<|>>|>>>|+|-|*|/|%|**|||^|&|in|instanceof'
-instanceof VAL2                   #  - left EXPR
+instanceof VAL2                   #
+VAL |> VAL2                      *#    or '|>'
+                                  #  - left EXPR
                                   #  - right EXPR
 
 VAR = += -= *= /= **= %= <<= >>=  #Child of EXPR, type 'AssignmentExpression':
 >>>= |= ^= &= VAL                 #  - operator '=|+=|-=|*=|/=|**=|%=|<<=|>>=|>>>=||=|^=|&='
+VAR &&= ||= ??= VAL              *#    or '&&=|||=|??='
                                   #  - left PATTERN or (only on older JavaScript engines) EXPR
                                   #  - right EXPR
 
 VAL || && VAL2                    #Child of EXPR, type 'LogicalExpression':
                                   #  - operator '|||&&'
+VAL ?? VAL2                      *#   or '??'
                                   #  - left EXPR
                                   #  - right EXPR
 
@@ -452,6 +471,7 @@ new.target                        #Child of EXPR, type 'MetaProperty':
                                   #  - meta IDENTIFIER
                                   #  - property IDENTIFIER
 import.meta                    sem#Same
+function.sent                    *#Same
 
 this                              #Child of EXPR, type 'ThisExpression'
 
@@ -487,11 +507,11 @@ export default VAL                #Child of MODULE_DECLARATION, type 'ExportDefa
 export * from "MDL"               #Child of MODULE_DECLARATION, type 'ExportAllDeclaration':
                                   #  - source LITERAL ("MDL")
 
-export * as VAR from "MDL"   (am)=#Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
-                             (am)=#  - no local
+export * as VAR from "MDL"   (am)*#Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
+                             (am)*#  - no local
                               (m)##  - exported -> specifier
-export VAL from "MDL"            =#Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
-                                 =#  - no local
+export VAL from "MDL"            *#Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
+                                 *#  - no local
 
 import ... from "MDL"             #Child of MODULE_DECLARATION, type 'ImportDeclaration':
                                   #  - specifiers MODULE_SPECIFIER_ARR
