no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -104,7 +104,7 @@ EXPR_STATEMENT                    #Child of STATEMENT, type 'ExpressionStatement
                              (bl)##  - extra.parenStart NUM
 
 #!/bin/bash                  (bl)##On PROGRAM:
-                             (bl)##  - interpreter INTERPRETER_DIRECTIVE
+                             (bl)##  - [interpreter INTERPRETER_DIRECTIVE]
                              (bl)##Type 'InterpreterDirective'
                              (bl)##  - value STR
 'use strict'                     b#Child of EXPR_STATEMENT:
@@ -113,9 +113,8 @@ EXPR_STATEMENT                    #Child of STATEMENT, type 'ExpressionStatement
                               (b)##On PROGRAM|BLOCK_STATEMENT:
                               (b)##  - directives DIRECTIVE_ARR
                               (b)##Type 'Directive':
-                              (b)##  - value DIRECTIVE_LITERAL (type 'DirectiveLiteral'):
-                              (b)##     - value STR
-                              (b)##     - extra.raw[Value] STR
+                              (b)##  - value DIRECTIVE_LITERAL
+                              (b)##Child of STRING_LITERAL, type 'DirectiveLiteral'
 
 ;                                 #Child of STATEMENT, type 'EmptyStatement'
                                   #Empty statement, with only semicolon
@@ -152,7 +151,7 @@ QUAL VAR = VAL, ...               #Child of DECLARATION, type 'VariableDeclarati
                                   #  - kind 'var|let|const'
 
 PATTERN                           #Parent of IDENTIFIER, MEMBER_EXPR, OBJ_PATTERN, ARR_PATTERN, REST_ELEMENT,
-                                  #ASSIGNMENT_PATTERN, TS_PARAMETER_PROPERTY
+                                  #ASSIGNMENT_PATTERN, TS_PARAMETER_PROPERTY, PRIVATE_NAME
 
 VAR                               #Child of EXPR+PATTERN, type 'Identifier':
                                   #  - name STR
@@ -237,7 +236,7 @@ new FUNC(...)                     #Child of EXPR, type 'NewExpression':
 
 [VAL]::VAL2                  (bl)*#Child of EXPR, type 'BindExpression':
                              (bl)*#  - [object EXPR] (VAL)
-                             (bl)*#  - [callee EXPR] (VAL2)
+                             (bl)*#  - callee EXPR (VAL2)
 
 ?                            (bl)*#Type 'ArgumentPlaceholder'
 
@@ -300,8 +299,8 @@ LABEL: ...                        #Child of STATEMENT, type 'LabeledStatement':
                                   #  - label IDENTIFIER
                                   #  - body STATEMENT
 
-do {...}                     (bl)*#Child of EXPRESSION, type 'DoExpression':
-                             (bl)*#  - body STATEMENT
+do {...}                     (bl)*#Child of EXPR, type 'DoExpression':
+                             (bl)*#  - body BLOCK_STATEMENT
 
 
                                              /=+===============================+=\
@@ -453,16 +452,16 @@ class [CLASS] [extends PARENT] {  #Type 'Class':
                                  b#  - kind 'constructor|method|get|set'
                                  b#  - static BOOL
                                  b#  - computed BOOL
-                              (b)##Type 'ClassMethod' like METHOD_DEFINITION but:
+                              (b)##Type 'Class[Private]Method' like METHOD_DEFINITION but:
                               (b)##  - child of FUNCTION_DECLARATION
                               (b)##  - no value
   [static] VAR [= VAL]      setbl|#Type 'FieldDefinition'
-                            (tbl)##or 'ClassProperty':
+                            (tbl)##or 'Class[Private]Property':
                                se|#  - key EXPR|PRIVATE_NAME
                                se|#  - [value EXPR]
                                se|#  - static BOOL
                                se|#  - computed BOOL
-  #VAR|#FUNC()                set|#Type 'PrivateName':
+  #VAR|#FUNC()                set|#Child of EXPR+PATTERN, type 'PrivateName':
                             setbl|#  - name STR
                              (bl)##  - id IDENTIFIER
 class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclaration'
