no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -6,10 +6,7 @@
 
 
 See:
-  - updates:
-     - https://github.com/microsoft/TypeScript/wiki/Breaking-Changes
-     - https://devblogs.microsoft.com/typescript/
-  - source like https://github.com/microsoft/TypeScript/blob/master/src/lib/es5.d.ts
+  - https://github.com/microsoft/TypeScript/blob/master/src/lib/es5.d.ts (only one left)
   - https://github.com/microsoft/TypeScript/blob/master/doc/spec.md
   - JSDoc then https://www.typescriptlang.org/docs/handbook/type-checking-javascript-files.html
   - reorganize this doc, adding chapters
@@ -348,13 +345,6 @@ INTERFACE MERGING ==>             #If INTERFACE declared several times, merge th
                                   #     - last declared before first declared
 
 CONSTRUCTOR_FUNC                  #Any constructor FUNC can be used as OBJ instance TYPE, just like CLASS.
-                                  #This includes:
-                                  #  - Error, RegExp, Date, etc.
-                                  #  - Object|Number|String|Boolean but should use object|number|string|boolean instead
-Promise[<T>]                      #PROMISE either:
-                                  #  - resolving T
-                                  #     - if 'never', means cannot resolve
-                                  #  - rejecting anything
 
 Function                          #Any FUNC
                                   #Should prefer the specific FUNC_TYPEs below
@@ -399,6 +389,30 @@ Array<TYPE>                       #ARR of same types
                                   #No additional values.
 [..., ...ARR_TYPE]                #Spreads an ARR_TYPE
                                   #Does not work with TUPLE
+
+Object|Number|String|Boolean      #Should use object|number|string|boolean instead
+Error                             #
+RegExp                            #
+Date                              #
+Promise<T>                        #PROMISE either:
+                                  #  - resolving T
+                                  #     - if 'never', means cannot resolve
+                                  #  - rejecting anything
+[Readonly][Weak]Map
+ <KEY_TYPE, VALUE_TYPE>           #
+[Readonly][Weak]Set<VALUE_TYPE>   #
+[Async]Iterator<T>                #ITERATOR doing next|return(T) and throw(ERROR)
+[Async]Iterable<T>                #ITERABLE
+[Async]IterableIterator<T>        #ITERABLETOR
+GeneratorFunction                 #function*(){}
+Generator                         #ITERABLE returned by (function*(){})
+Proxy                             #
+Uint8ClampedArray                 #
+[U]Int8|16|32Array                #
+Float32|64Array                   #
+Big[U]Int64Array                  #
+DataView                          #
+SharedArrayBuffer                 #
 
 { readonly ...: TYPE,... }        #Shallow immutability (like `const`) of OBJ properties.
                                   #Should be specified whenever possible.
