no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
@@ -5,38 +5,77 @@
 
 
 
+CONF                              #Can be:
+                                  #  - --conf-var-name (CLI)
+                                  #  - CONF.varName (register())
+                                  #  - ENVVAR TS_NODE_VAR_NAME (CLI, register(), -r)
+                                  #Serialization for CLI and ENVVAR:
+                                  #  - STR -> STR
+                                  #  - BOOL -> '0|1'
+                                  #  - ARR -> 'STR,...'
+                                  #  - OBJ -> 'JSON'
+                                  #  - FUNC -> not possible
 
-register([OPTS])->REGISTER
+TCONF                             #TypeScript configuration.
+                                  #Forces:
+                                  #  - no --noEmit
+                                  #  - no --declaration[Map] --emitDeclarationOnly
+                                  #  - --outDir '$$ts-node$$' (no --out[File]), but actually not written
+                                  #  - --sourceMap --inlineSources
+                                  #     - but actually uses inline source maps
+                                  #     - uses node-source-map-support on type checking ERRORs
+                                  #  - no incremental builds (--composite, --tsBuildInfoFile, --incremental)
+                                  #  - no --files|include|exclude if --files false (def)
+                                  #Default:
+                                  #  - --target es5 (instead of es3)
+                                  #  - --module commonjs
+-P|--project                      #Like tsc (def: guessed)
+--skip-project                    #BOOL (def: false). Do not use --project
+-O|--compiler-options             #TCONF.compilerOptions
+--pretty                          #Like tsc
+
+ts-node                           #Like node but using -r ts-node/register
+                                  #Works as REPL too (using 'repl' core module)
+                                  #  - `.type TYPE` -> print a TYPE (using REGISTER.getTypeInfo())
+-e|--eval
+-p|--print
+-r|--require                      #Same as node flags
+
+-r ts-node/register               #Do tsc runtime (instead of compile-time) on require() (using require.extensions['EXT'])
+                                  #Transpilation and type checking are cached, using file path as key.
+-r ts-node/register/transpile-only#Same but with --transpile-only
+-r ts-node/register/type-check    #Same but with --type-check
+
+--type-check                      #BOOL (def: true). Do type check.
+-T|--transpile-only               #BOOL (def: false). Do not type check.
+-D|--ignore-diagnostics           #'NUM'|NUM_ARR: ignore type checking errors with those codes
+--log-error                       #BOOL (def: false). `console.error()` on type checking error (instead of throwing)
+
+-I|--ignore                       #'REGEXP'_ARR (def: ['node_modules']). Ignore matching files
+--skip-ignore                     #BOOL (def: false). Do not use --ignore
+
+-C|--compiler                     #Underlying 'MODULE' (def: 'typescript')
+CONF.readFile('PATH')[->STR]
+CONF.fileExists('PATH')->BOOL     #Customize underlying FS.* calls
+
+register([CONF])->REGISTER        #Same as -r but programatically
 
 REGISTER.compile
- ('TYPESCRIPT', 'FILENAME'[, NUM])
- ->'JAVASCRIPT'
-                                  #NUM is line offset
-REGISTER.getTypeInfo
+ ('TYPESCRIPT', 'FILENAME'[, NUM])#Manually transpile and type check a STR
+ ->'JAVASCRIPT'                   #NUM is line offset
+
+REGISTER.getTypeInfo              #Retrieve metadata about a VAR inside 'TYPESCRIPT'
  ('TYPESCRIPT', 'FILENAME', NUM)  #NUM is byte offset
- ->OBJ                            #OBJ: name 'TYPE', comment STR
-REGISTER.cwd                      #'DIR'
+ ->OBJ                            #OBJ:
+                                  #  - name 'VAR'
+                                  #  - comment STR (like autocomplete popup in VSCode)
+                                  #Requires --type-check
+
+REGISTER.ts.*                     #Forwards to TYPESCRIPT.*
+CONF.transformers                 #Custom TYPESCRIPT transformers
+REGISTER.cwd                      #process.cwd()
+
+EXTENSIONS ==>                    #For extensions '.ts' and (depending on TCONF.allowJs|jsx) '.js[x]|.tsx'
 REGISTER.extensions               #'EXT'_ARR
-REGISTER.ts.*                     #Helpers from TypeScript core
+--prefer-ts-exts                  #BOOL (def: false). If importing with '.EXT', prefer '.ts' over '.js'
 
-OPTS.files                        #BOOL
-OPTS.pretty                       #BOOL
-OPTS.compiler                     #STR
-OPTS.compilerOptions              #OBJ
-OPTS.ignore                       #STR_ARR
-OPTS.project                      #STR
-OPTS.skipIgnore                   #BOOL
-OPTS.skipProject                  #BOOL
-OPTS.preferTsExts                 #BOOL
-OPTS.ignoreDiagnostics            #STR|NUM_ARR
-OPTS.typeCheck                    #BOOL
-OPTS.transpileOnly                #BOOL
-OPTS.logError                     #BOOL
-OPTS.readFile('PATH')[->STR]      #
-OPTS.fileExists('PATH')->BOOL     #
-OPTS.transformers                 #
-
-TS_NODE_*                         #STR. For any option, e.g. TS_NODE_COMPILER_OPTIONS
-                                  #BOOL -> '0|1'
-                                  #ARR -> 'STR,...'
-                                  #OBJ -> 'JSON'
