--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -948,8 +948,8 @@ PACKAGE.typesVersions.SEMVER      #OBJ:
 
 --module STR                      #Module system for output:
                                   #  - esnext: ES modules
-                                  #  - es2015|es6: same but without import() and import.meta
-                                  #  - commonjs (def)
+                                  #  - es2015|es6 (def): same but without import() and import.meta
+                                  #  - commonjs (def if --target 'es3|es5')
                                   #  - amd
                                   #  - umd
                                   #  - system: SystemJS
